syntax = "proto3";

package dem;

option go_package = "demRR";


message HelloRequest {
    string name = 1;
}
  
message HelloResponse {
    string message = 1;
}

service DemService{

    rpc SayHello (HelloRequest) returns (HelloResponse);

}